<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/g_E3E3E3"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingTop="10dp">

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/g_565656"
        android:textSize="20sp" />

    <android.support.v7.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="18dp"
                android:background="@mipmap/ic_cache" />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cache"
                />

            <CheckBox
                android:id="@+id/cache_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="200dp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
       android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@mipmap/ic_close" />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noimage"
                />

            <CheckBox
                android:id="@+id/noimg_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="200dp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@mipmap/ic_night"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night"
                />

            <CheckBox
                android:id="@+id/night_box"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="200dp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outhor"
        android:textColor="@color/g_565656"
        android:textSize="20sp" />

    <android.support.v7.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@mipmap/ic_feedback" />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@mipmap/ic_clear" />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clearcache"
                />
            <TextView
                android:layout_marginLeft="200dp"
                android:layout_gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ok"
                android:textSize="20sp"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@mipmap/ic_update" />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkupdate"
                />
            <TextView
                android:layout_marginLeft="100dp"
                android:layout_gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:textSize="15sp"
                android:text="当前版本号v1.3.0"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>